--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     <a href="https://b2b.dodopizza.org/" target="_blank">Корпоративные заказы</a>
                 </div>
                 <div class="Downloads">
-                    <a href=https://app.appsflyer.com/ru.dodopizza.app?af_ad=icon&pid=dodopizza.site&af_click_lookback=7d&c=web target="_blank"><img src="images/googleplay_271ed894bd.png" height="40"></a>
+                    <a href="https://app.appsflyer.com/ru.dodopizza.app?af_ad=icon&pid=dodopizza.site&af_click_lookback=7d&c=web" target="_blank"><img src="images/googleplay_271ed894bd.png" height="40"></a>
                     <a href="https://app.appsflyer.com/id894649641?af_ad=icon&pid=dodopizza.site&af_click_lookback=7d&c=web"target="_blank"><img src="images/appstore_476166ec50.svg" height="40"></a>
                 </div>
             </div>
