--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
                     <a name="form">Заполните анкету</a>
                 </span>
                 <div class="opros">
-                    <input type="text" size="30" class="town" placeholder="Город">
-                    <input type="text" size="30" class="adress" placeholder="Адрес пиццерии">
-                    <input type="text" size="30" class="work" placeholder="Кем хотите быть">
-                    <input type="text" size="30" class="name" placeholder="Имя">
+                    <input type="text" size="30" class="town" placeholder="Город"> <img class="clicks_button1" src="images/svg (2).svg" height="18">
+                    <input type="text" size="30" class="adress" placeholder="Адрес пиццерии">  <img class="clicks_button2" src="images/svg (2).svg" height="18">
+                    <input type="text" size="30" class="work" placeholder="Кем хотите быть"> <img class="clicks_button3" src="images/svg (2).svg" height="18">
+                    <input type="text" size="30" class="name" placeholder="Имя"> 
                     <input type="text" size="30" class="surname" placeholder="Фамилия">
                     <input type="text" size="15" class="birth" placeholder="Дата рождения">
                     <input type="tel" size="15" class="telephone" placeholder="Телефон">
-                    <input type="text" size="30" class="social" placeholder="Ссылка на соцсети">
+                    <input type="text" size="30" class="social" placeholder="Ссылка на соцсети">    
                 </div>
                 <span class="for_wish">По желанию. На случай, если не дозвонимся по телефону.</span>
                 <div class="person_data"> 
