--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                     <a name="form">Заполните анкету</a>
                 </span>
                 <div class="opros">
-                    <input type="text" size="30" class="town" placeholder="Город"> <img class="clicks_button1" src="images/svg (2).svg" height="18">
-                    <input type="text" size="30" class="adress" placeholder="Адрес пиццерии">  <img class="clicks_button2" src="images/svg (2).svg" height="18">
-                    <input type="text" size="30" class="work" placeholder="Кем хотите быть"> <img class="clicks_button3" src="images/svg (2).svg" height="18">
+                    <input type="text" size="30" class="town" placeholder="Город"> <img draggable="false" class="clicks_button1" src="images/svg (2).svg" height="18">
+                    <input type="text" size="30" class="adress" placeholder="Адрес пиццерии">  <img draggable="false" class="clicks_button2" src="images/svg (2).svg" height="18">
+                    <input type="text" size="30" class="work" placeholder="Кем хотите быть"> <img  draggable="false" class="clicks_button3" src="images/svg (2).svg" height="18">
                     <input type="text" size="30" class="name" placeholder="Имя"> 
                     <input type="text" size="30" class="surname" placeholder="Фамилия">
                     <input type="text" size="15" class="birth" placeholder="Дата рождения">
@@ -251,22 +251,22 @@
                         <span class="queries_kitchen">Работникам кухни</span>
                     </div>
                     <div class="queries_buttons">
-                        <div class="queries_coop"> <span class="queries_right_title">Какие документы нужны для сотрудничества? <img class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> <span class="queries_hidden_text_bold">Для граждан России:</span> паспорт, ИНН, СНИЛС, номер банковской карты,
+                        <div class="queries_coop"> <span class="queries_right_title">Какие документы нужны для сотрудничества? <img draggable="false" class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> <span class="queries_hidden_text_bold">Для граждан России:</span> паспорт, ИНН, СНИЛС, номер банковской карты,
                             права для <br> управления автомобилем или документ, который подтверждает право управления другим транспортным средством. <br> <br>
                             <span class="queries_hidden_text_bold">Для граждан других стран:</span> узнать точную информацию можно после заполнения анкеты. </p></div>
                             
-                        <div class="queries_graph"> <span class="queries_right_title"> Как составляется график? <img class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> 
+                        <div class="queries_graph"> <span class="queries_right_title"> Как составляется график? <img draggable="false" class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> 
                             График формируется по согласованию с курьерами на основе данных о загруженности пиццерии. Расскажите, когда вам удобно доставлять заказы: весь день или несколько часов, утром или вечером — мы подберем подходящий вариант.</p>
                         </div>
 
-                        <div class="queries_reward"> <span class="queries_right_title"> Из чего складывается вознаграждение? <img class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> 
+                        <div class="queries_reward"> <span class="queries_right_title"> Из чего складывается вознаграждение? <img draggable="false" class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> 
                             Вознаграждение зависит от различных факторов, например: количества доставленных заказов, километража, часов занятости или ГСМ. У нас есть прозрачная система мотивации, о которой вы сможете узнать на встрече с управляющим.</p>
                         </div>
 
-                        <div class="queries_orders"> <span class="queries_right_title">На чем можно доставлять заказы? <img class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> 
+                        <div class="queries_orders"> <span class="queries_right_title">На чем можно доставлять заказы? <img draggable="false" class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> 
                             Вы можете доставлять заказы на своем автомобиле или пешком — это зависит от зоны доставки выбранной пиццерии. В некоторых точках есть собственный транспорт: автомобили, электросамокаты, электровелосипеды, велосипеды. Узнать точную информацию можно после заполнения анкеты.</p>
                         </div>
-                        <div class="queries_fines"> <span class="queries_right_title">Есть ли штрафы? <img class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> 
+                        <div class="queries_fines"> <span class="queries_right_title">Есть ли штрафы? <img draggable="false" class="button_clicker" src="images/svg (2).svg" height="20px "></span> <p class="queries_hidden_text"> 
                             У каждого, кто честно и искренне делает свое дело, должно быть право на ошибку. Поэтому мы никогда не штрафуем, — это противоречит ценностям Додо. </p>
                         </div>
                     </div>
@@ -305,13 +305,13 @@
             </div>
             <footer class="container footer">
                 <div class="social_networks">
-                    <a class="vk" href="https://vk.com/dodo" target="_blank"><img class="vk_icon" src="images/vk_g_a505792c5c.svg">Вконтакте</a>
-                    <a class="youtube" href="https://www.youtube.com/dodomovie" target="_blank"><img class="youtube_icon" src="images/youtube_g_3930a841c3.svg">Youtube</a>
+                    <a class="vk" href="https://vk.com/dodo" target="_blank"><img draggable="false" class="vk_icon" src="images/vk_g_a505792c5c.svg">Вконтакте</a>
+                    <a class="youtube" href="https://www.youtube.com/dodomovie" target="_blank"><img draggable="false" class="youtube_icon" src="images/youtube_g_3930a841c3.svg">Youtube</a>
                 </div>
 
                 <div class="final">
                     <div class="final_left">
-                        <img src="images/copy-dodo.8b410ea.svg">
+                        <img draggable="false" src="images/copy-dodo.8b410ea.svg">
                         <span>© 2023</span>
                         <a href="https://rabotavdodo.ru/uploads/useragreement_c31f17871d.html" target="_blank">Пользовательское соглашение</a>
                         <a href="https://rabotavdodo.ru/uploads/policy_3ac21d6f68.html" target="_blank">Политика обработки персональных данных</a>
